eldest not working

--- a/app/views/actor_templates/details.html.erb
+++ b/app/views/actor_templates/details.html.erb
@@ -1,53 +1,64 @@
 <h1>
-  Director #<%= @the_director.id %> details
+  Actor #<%= @the_actor.id %> details
 </h1>
 
-<a href="/directors">Go back</a>
+<a href="/actors">Go back</a>
 
 <hr>
 
 <dl>
   <dt>Name</dt>
-  <dd><%= @the_director.name %></dd>
+  <dd><%= @the_actor.name %></dd>
 
   <dt>Dob</dt>
-  <dd><%= @the_director.dob %></dd>
+  <dd><%= @the_actor.dob %></dd>
 
   <dt>Bio</dt>
-  <dd><%= @the_director.bio %></dd>
+  <dd><%= @the_actor.bio %></dd>
 
   <dt>Image</dt>
-  <dd> <img src="<%= @the_director.image %>" alt="" width="200"> </dd>
+  <dd> <img src="<%= @the_actor.image %>" alt="" width="200"> </dd>
 
   <dt>Created at</dt>
-  <dd><%= @the_director.created_at %></dd>
+  <dd><%= @the_actor.created_at %></dd>
 
   <dt>Updated at</dt>
-  <dd><%= @the_director.updated_at %></dd>
+  <dd><%= @the_actor.updated_at %></dd>
 </dl>
 
-<h2>Filmography</h2>
-
-<%= matching_movies = Movie.where({ :director_id => @the_director.id }) %>
+<% matching_characters = Character.where({ :actor_id => @the_actor.id})%>
 
 <table border="1">
   <tr>
-    <th>ID</th>
-    <th>Image</th>
     <th>Title</th>
     <th>Year</th>
     <th>Director</th>
-    <th></th>
+    <th>Character name</th>
+    <th>Character name</th>
   </tr>
-
-  <% matching_movies.each do |a_movie| %>
+  <tr>
+    <% matching_characters.each do |a_character|%>
       <tr>
-        <td><%= a_movie.id%></td>
-        <td><img src="<%= a_movie.image%>" alt="" width="50"></td>
-        <td><%= a_movie.title%></td>
-        <td><%= a_movie.year%></td>
-        <td><%= a_movie.director_id%></td>
-        <td> <a href="/movies/<%= a_movie.id%>">Show details</a> </td>
+        <td>
+          <% matching_movies = Movie.where({ :id => a_character.movie_id})%>
+          <% the_movie = matching_movies.at(0) %>
+          <%= the_movie.title %>
+        </td>
+        <td>
+          <%= the_movie.year %>
+        </td>
+        <td>
+        <% matching_directors = Director.where({ :id => the_movie.director_id})%>
+        <% the_director = matching_directors.at(0)%>
+          <%= the_director.name %>
+        </td>
+        <td><%= a_character.name %></td>
+        <td>
+          <a href="/movies/<%= the_movie.id%>">
+          Show details
+          </a>
+        </td>
       </tr>
-  <% end %>
+    <% end%>
+  </tr>
 </table>
