--- a/app/views/actor_templates/list.html.erb
+++ b/app/views/actor_templates/list.html.erb
@@ -9,16 +9,16 @@
     <th></th>
   </tr>
 
-<% Actor.all.each do |a_director| %>
+<% Actor.all.each do |a_actor| %>
   <tr>
-    <td> <%= a_director.id %> </td>
+    <td> <%= a_actor.id %> </td>
     <td> 
-      <img src="<%= a_director.image %>" width="100">
+      <img src="<%= a_actor.image %>" width="100">
      </td>
-    <td> <%= a_director.name %> </td>
-    <td> <%= a_director.dob %> </td>
+    <td> <%= a_actor.name %> </td>
+    <td> <%= a_actor.dob %> </td>
     <td> 
-      <a href="/directors/<%= a_director.id %>"> Show details </a> 
+      <a href="/actors/<%= a_actor.id %>"> Show details </a> 
     </td>
   </tr>
   <% end %>
